k8s-monitoring/prometheus.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cuenly-prometheus
  namespace: cuenly-monitoring
  labels:
    app: cuenly-prometheus
    component: metrics
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: cuenly-monitoring
spec:
  serviceName: cuenly-prometheus
  replicas: 1
  selector:
    matchLabels:
      app: cuenly-prometheus
  template:
    metadata:
      labels:
        app: cuenly-prometheus
        component: metrics
      annotations:
        cuenly.com/restart-safe: "true"
    spec:
      serviceAccountName: cuenly-monitoring
      securityContext:
        fsGroup: 2000
        runAsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: prometheus
        image: prom/prometheus:v2.40.0
        imagePullPolicy: IfNotPresent
        args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus/
        - --web.console.libraries=/etc/prometheus/console_libraries
        - --web.console.templates=/etc/prometheus/consoles
        - --storage.tsdb.retention.time=30d
        - --storage.tsdb.retention.size=45GB
        - --web.enable-lifecycle
        - --web.enable-admin-api
        ports:
        - containerPort: 9090
          name: http-prometheus
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: http-prometheus
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /-/ready
            port: http-prometheus
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 4
          failureThreshold: 3
        resources:
          limits:
            cpu: 2000m
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 2Gi
        volumeMounts:
        - mountPath: /etc/prometheus
          name: config
        - mountPath: /prometheus
          name: storage
      volumes:
      - name: config
        configMap:
          name: cuenly-prometheus-config
  volumeClaimTemplates:
  - metadata:
      name: storage
      labels:
        app: cuenly-prometheus
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 50Gi

---
apiVersion: v1
kind: Service
metadata:
  name: cuenly-prometheus
  namespace: cuenly-monitoring
  labels:
    app: cuenly-prometheus
    component: metrics
spec:
  ports:
  - port: 9090
    protocol: TCP
    name: http-prometheus
    targetPort: http-prometheus
  selector:
    app: cuenly-prometheus
  type: ClusterIP
